--- a/.gitattributes
+++ b/.gitattributes
@@ -1,14 +1,11 @@
 * text eol=lf
-src/**/*.ttf binary
-dist/**/*.js binary
-dist/**/*.ttf binary
-dist/**/*.map binary
-dist/**/*.eot binary
-dist/**/*.svg binary
-dist/**/*.ttf binary
-dist/**/*.woff binary
-dist/**/*.woff2 binary
-dist/**/*.png binary
-dist/*.html text
-
-src/main/html/images/*.png binary
+**/*.js binary
+**/*.ttf binary
+**/*.map binary
+**/*.eot binary
+**/*.svg binary
+**/*.ttf binary
+**/*.woff binary
+**/*.woff2 binary
+**/*.png binary
+*.html text
